// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Entry Schema createEntry: should work 1`] = `
Object {
  "data": Object {
    "createEntry": Object {
      "Guest": Object {
        "email": "jane@example.com",
        "firstName": "Jane",
        "lastName": "Doe",
      },
      "id": "asdf",
      "see": "xyz",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Entry Schema endEntry: should work 1`] = `
Object {
  "data": Object {
    "endEntry": Object {
      "createdAt": "2018-09-10 04:05:33",
      "endedAt": "2020-02-01T00:00:00",
      "id": "123",
      "see": "person1",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Entry Schema getByGuestId: should work 1`] = `
Object {
  "data": Object {
    "byGuestId": Array [],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Entry Schema getEntry: should work 1`] = `
Object {
  "data": Object {
    "getEntry": Object {
      "createdAt": "2018-09-10 04:05:33",
      "endedAt": "2018-09-10 05:06:44",
      "id": "123",
      "see": "person1",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Entry Schema listEntry should be protected 1`] = `
Object {
  "data": Object {
    "listEntry": null,
  },
  "errors": Array [
    [GraphQLError: You are not authenticated],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Entry Schema listEntry: should work 1`] = `
Object {
  "data": Object {
    "listEntry": Array [
      Object {
        "Guest": Object {
          "NIK": "12312365",
          "firstName": "Andy",
          "lastName": "Huang",
        },
        "createdAt": "2018-09-10 04:05:33",
        "endedAt": "2018-09-10 05:06:44",
        "see": "person1",
      },
      Object {
        "Guest": Object {
          "NIK": "12312365",
          "firstName": "Andy",
          "lastName": "Huang",
        },
        "createdAt": "2018-02-07 16:00:04",
        "endedAt": null,
        "see": "person2",
      },
      Object {
        "Guest": Object {
          "NIK": "12312365",
          "firstName": "Andy",
          "lastName": "Huang",
        },
        "createdAt": "2019-06-21 17:00:45",
        "endedAt": "2019-06-21 18:00:00",
        "see": "person2",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Entry Schema listEntryToday: should work 1`] = `
Object {
  "data": Object {
    "listTodayEntry": Array [],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
